syntax = "proto3";
package MMOPPP;

option csharp_namespace = "Google.Protobuf.MMOPPP.Messages"; // Changes the namespace for c# generated code

// -- Helper Messages --
message Vector3
{
    float x = 1; // Forward
    float y = 2; // Right
    float z = 3; // Up
}

message Input
{
    Vector3 player_move_inputs = 3;
    Vector3 euler_body_rotation = 4;
    Vector3 euler_camera_rotation = 5;
    bool strafe = 6;
    bool sprint = 7;

    uint64 sent_time = 8; // Miliseconds since epoc
}

// -- Full Messages --

// From Server
message ServerUpdate
{
    string name = 1;
    repeated Input past_inputs = 2;
    Vector3 location = 3;
    Vector3 body_rotation = 4;
}

message ServerUpdates
{
    repeated ServerUpdate updates = 1;
}

// To Server
message ClientInput
{
    string name = 1;
    Input input = 2;
}
